refactor: 사용자 근처 크루 목록 조회 기능 리팩토링